--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -27,7 +27,9 @@
         android:layout_toLeftOf="@+id/orderNo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="@color/primary_text"/>
+        android:textColor="@color/primary_text"
+        android:maxLines="1"
+        android:ellipsize="end" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -77,8 +79,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/expected_delivery_date"
-        android:id="@+id/plannedDeliveryDateLabel"
+        android:text="@string/delivery_date"
+        android:id="@+id/readyDateLabel"
         android:textColor="@color/secondary_text"
         android:layout_below="@+id/description"
         android:layout_alignRight="@+id/orderNo"
@@ -90,7 +92,7 @@
         android:text="Date"
         android:id="@+id/expectedDeliveryDate"
         android:textColor="@color/primary_text"
-        android:layout_below="@+id/plannedDeliveryDateLabel"
+        android:layout_below="@+id/readyDateLabel"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -99,34 +101,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="10sp"
         android:text="@string/last_updated"
         android:id="@+id/lastUpdatedDateLabel"
         android:textColor="@color/secondary_text"
-        android:layout_below="@+id/orderDate"/>
+        android:layout_alignBottom="@+id/orderStatus"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <TextView
-        android:paddingTop="5dp"
         android:paddingLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="10sp"
         android:text="Date"
         android:id="@+id/lastUpdatedDate"
         android:textColor="@color/secondary_text"
+        android:layout_alignBottom="@+id/lastUpdatedDateLabel"
         android:layout_toRightOf="@+id/lastUpdatedDateLabel"
-        android:layout_toEndOf="@+id/lastUpdatedDateLabel"
-        android:layout_alignBottom="@+id/lastUpdatedDateLabel"/>
+        android:layout_toEndOf="@+id/lastUpdatedDateLabel" />
     <TextView
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/your_order_is_ready"
-        android:id="@+id/orderReady"
-        android:textColor="@color/green"
+        android:text="@string/order_placed"
+        android:id="@+id/orderStatus"
+        android:textColor="@color/primary_text"
+        android:textStyle="bold"
         android:layout_below="@+id/amount"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
