--- a/app/src/main/res/layout/activity_product_reviews.xml
+++ b/app/src/main/res/layout/activity_product_reviews.xml
@@ -82,7 +82,8 @@
             android:paddingTop="10dp"
             android:padding="5dp"
             android:layout_marginTop="10dp"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:onClick="insertReview"/>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
