--- a/app/src/main/res/layout/products_of_category.xml
+++ b/app/src/main/res/layout/products_of_category.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:text="Title"
         android:padding="5dp"
+        android:layout_margin="3dp"
         android:textColor="@color/accent"
         android:id="@+id/title"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
