--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -90,6 +90,11 @@
                 android:layout_height="40dp"
                 android:id="@+id/review"
                 android:src="@drawable/review" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:id="@+id/chat"
+                android:src="@drawable/chat" />
         </LinearLayout>
         <TextView
             android:layout_below="@+id/fav_share_buttons"
