--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
 
     <color name="primary">#FF6600</color>
-    <color name="primary_dark">#F57C00</color>
+    <color name="primary_dark">#6e2c00</color>
     <color name="primary_light">#FFE0B2</color>
     <color name="accent">#536DFE</color>
     <color name="primary_text">#212121</color>
